# SimpleStereo

./: .gitignore  .readthedocs.yaml  MANIFEST.in  MANIFEST.in.OLD  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
docs/: conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  simplestereo.html  simplestereo.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  setup.doctree  simplestereo.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  simplestereo.html
docs/_modules/: index.html  simplestereo.html
docs/_modules/simplestereo/: _rigs.html  active.html  calibration.html  passive.html  (+4 more)
docs/_sources/: simplestereo.rst.txt
docs/_static/: custom.css
docs/doctrees/: environment.pickle  simplestereo.doctree
docs/html/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  simplestereo.html
examples/: 001 CalibrationChessboard.py  002 CaptureImagePairs.py  003 BuildStereoRig.py  003a CalibrateSingleCamera.py  003b BuildStereoRig.py  004a UndistortImages.py  004b UndistortDrawEpipolarLines.py  005 RectifyRig TEMP.py  005 RectifyRig.py  006 RectifyImages.py  007 UseRawCameraData.py  008 StereoMatchingSGBM.py  009 StereoMatchingASW.py  010 StereoMatchingTsukuba.py  011 Build3DPointCloud.py  012 ClickDepthMapDistance.py  101 StructuredLightRig.py  102 Cam-Proj capture.py  102 StereoFTP.py
html/: index.html  modules.html
simplestereo/: __init__.py  _passive.cpp  _rigs.py  _unwrapping.cpp  active.py  calibration.py  passive.py  passiveExt.cpp  points.py  postprocessing.py  rectification.py  unwrapping.py  utils.py
simplestereo/headers/: colorconversion.hpp
sphinx/: BUILD_SCRIPT.sh
sphinx-documentation-generator/: BUILD_SCRIPT.sh  conf.py  simplestereo.rst
sphinx-documentation-generator/_static/: custom.css
(+32 files in other folders)
