[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleStereo"
version = "1.0.7"
authors = [
  { name="decadenza" },
]
description = "Stereo vision made simple"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19",
    "opencv-contrib-python>=4.5",
    "scipy>=1.4",
    "matplotlib>=3",
]

[project.urls]
"Homepage" = "https://github.com/decadenza/SimpleStereo"
"Bug Tracker" = "https://github.com/decadenza/SimpleStereo/issues"