[metadata]
name = SimpleStereo
version = 1.0.1
description = Stereo vision made simple
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
author = Pasquale Lafiosca
url = http://github.com/decadenza/SimpleStereo
license = GNU General Public License v3 (GPLv3)
